--- a/views/customers/index.ejs
+++ b/views/customers/index.ejs
@@ -10,7 +10,7 @@
     <h1>Hello FSW1 tercinta!</h1>
 
     <% if (message != "") { %>
-    <div class="alert">Data berhasil <%= message %></div>
+    <div class="alert">Data succes <%= message %></div>
     <% } %>
 
     <table>
@@ -44,7 +44,7 @@
       <% }) %>
     </table>
     <a href="/customers/create">
-      <button>tambah customer baru</button>
+      <button>Add new customer</button>
     </a>
   </body>
 </html>
